Bug 90003 - Empty paragraph delimiter is at wrong position
Summary: Empty paragraph delimiter is at wrong position
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.5.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-14 13:39 UTC by Miklos Vajna
Modified: 2015-03-14 15:10 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Reproducer document (8.32 KB, application/vnd.oasis.opendocument.text)
2015-03-14 13:39 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2015-03-14 13:39:45 UTC
Created attachment 114091 [details]
Reproducer document

See the attached reproducer document, up to 4.4, Writer rendered the paragraph marker on the left side of the frame, master renders it at the right side of it.

Introduced by commit 25c50ff9fb0f277da9bc164d8244a774ef1ebba4 to fix a corner-case, but it broke a more common case.
Comment 1 Commit Notification 2015-03-14 15:09:27 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d8bb2a9705be7a362d4efb6e7e52cd9cb0eaf46d

tdf#90003 Revert "SwTxtFormatter::NewPortion: fix lost SwFlyPortion"

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.