tdf#90003 Revert "SwTxtFormatter::NewPortion: fix lost SwFlyPortion"

This reverts commit 25c50ff9fb0f277da9bc164d8244a774ef1ebba4. The
original commit fixed a corner-case, but also broke a much more frequent
use case. Revert till we have a better solution for the corner-case.

Conflicts:
	sw/qa/extras/inc/swmodeltestbase.hxx
	sw/qa/extras/uiwriter/uiwriter.cxx

Change-Id: I0f90459e9bc372eeba18bf81c5d1dfcccbe21753